--- a/requirements.txt
+++ b/requirements.txt
@@ -2,18 +2,28 @@ aniso8601==7.0.0
 asgiref==3.4.1
 autopep8==1.6.0
 backports.zoneinfo==0.2.1
+certifi==2021.10.8
+charset-normalizer==2.0.9
 Django==3.2.10
 django-filter==21.1
+django-graphql-jwt==0.3.4
+django-guardian==2.4.0
 graphene==2.1.9
 graphene-django==2.15.0
+graphene-django-optimizer==0.9.1
+graphene-django-plus==4.4
 graphql-core==2.3.2
 graphql-relay==2.0.1
+idna==3.3
 promise==2.3
 pycodestyle==2.8.0
+PyJWT==2.3.0
 pytz==2021.3
+requests==2.26.0
 Rx==1.6.1
 singledispatch==3.7.0
 six==1.16.0
 sqlparse==0.4.2
 text-unidecode==1.3
 toml==0.10.2
+urllib3==1.26.7
